[gd_scene load_steps=12 format=3 uid="uid://5r54yjixl5ki"]

[ext_resource type="Script" path="res://Assets/Blocks/PowerupBlock.gd" id="1_ksxrm"]
[ext_resource type="SpriteFrames" uid="uid://ycvex6nils5o" path="res://Assets/Blocks/PowerupBlock_SpriteFrames.tres" id="2_jyscs"]
[ext_resource type="Script" path="res://Assets/Blocks/PowerupBlock_Tool_ShowType.gd" id="3_l0f5f"]
[ext_resource type="Texture2D" uid="uid://b8e7ff7svdxvv" path="res://Assets/Powerups/FireFlower_AtlasTexture.tres" id="4_rgt8p"]
[ext_resource type="Texture2D" uid="uid://b264i0k53gt08" path="res://Assets/Powerups/SuperMushroom_AtlasTexture.tres" id="5_aiga4"]
[ext_resource type="Texture2D" uid="uid://c0hvdhgcagosg" path="res://Assets/Powerups/OneUpMushroom_AtlasTexture.tres" id="6_tetvv"]
[ext_resource type="Texture2D" uid="uid://t8odpvpl1rqg" path="res://Assets/Powerups/SuperLeaf_AtlasTexture.tres" id="7_i7l7w"]
[ext_resource type="Texture2D" uid="uid://cc4y1vy1s7wxr" path="res://Assets/Powerups/Starman_AtlasTexture.tres" id="8_gbxvc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fggmh"]
size = Vector2(16, 16)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1b71f"]
emission_shape = 1
emission_sphere_radius = 10.17
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
gravity = Vector3(0, 98, 0)
initial_velocity_min = 5.13
initial_velocity_max = 82.05
angular_velocity_min = 107.08
angular_velocity_max = 720.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
color = Color(1, 0.65098, 0, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_scqj8"]
emission_shape = 1
emission_sphere_radius = 10.17
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
gravity = Vector3(0, 98, 0)
initial_velocity_min = 5.13
initial_velocity_max = 82.05
angular_velocity_min = 107.08
angular_velocity_max = 720.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
color = Color(1, 1, 0, 1)

[node name="PowerupBlock" type="StaticBody2D"]
collision_layer = 9
collision_mask = 0
script = ExtResource("1_ksxrm")

[node name="visuals" type="AnimatedSprite2D" parent="."]
z_index = 10
texture_filter = 1
sprite_frames = ExtResource("2_jyscs")
animation = &"unlooted"

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fggmh")

[node name="visualfx" type="Node2D" parent="."]

[node name="explosion" type="GPUParticles2D" parent="visualfx"]
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_1b71f")
lifetime = 3.0
one_shot = true
explosiveness = 1.0

[node name="coin" type="GPUParticles2D" parent="visualfx"]
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_scqj8")
lifetime = 3.0
one_shot = true
explosiveness = 1.0

[node name="properties" type="Node" parent="."]

[node name="lootable" type="Node" parent="properties"]

[node name="Debug" type="Node2D" parent="."]
position = Vector2(0, -17)
script = ExtResource("3_l0f5f")

[node name="FireFlower" type="Sprite2D" parent="Debug"]
visible = false
modulate = Color(1, 1, 1, 0.392157)
z_index = 10
texture_filter = 1
texture = ExtResource("4_rgt8p")

[node name="SuperMushroom" type="Sprite2D" parent="Debug"]
modulate = Color(1, 1, 1, 0.392157)
z_index = 10
texture_filter = 1
texture = ExtResource("5_aiga4")

[node name="OneUpMushroom" type="Sprite2D" parent="Debug"]
visible = false
modulate = Color(1, 1, 1, 0.392157)
z_index = 10
texture_filter = 1
texture = ExtResource("6_tetvv")

[node name="SuperLeaf" type="Sprite2D" parent="Debug"]
visible = false
modulate = Color(1, 1, 1, 0.392157)
z_index = 10
texture_filter = 1
texture = ExtResource("7_i7l7w")

[node name="Starman" type="Sprite2D" parent="Debug"]
visible = false
modulate = Color(1, 1, 1, 0.392157)
z_index = 10
texture_filter = 1
texture = ExtResource("8_gbxvc")
